# activity-log-scanner

./: .gitignore  pyproject.toml
src/activity_log_scanner/: __init__.py  __version__.py  scanner.py
src/activity_log_scanner/scripts/: to_csv.py
tests/activity_log_scanner/: test_scanner.py
