[tool.poetry]
name = "activity-log-scanner"
version = "0.1.0"
description = "Scans screenshots of activity logs from Foxhole"
authors = ["Stephen Badger <stephen.badger@gmail.com>"]
license = "GPL-3"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.5.5"
pytesseract = "^0.3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[tool.poetry.scripts]
to-csv = "activity_log_scanner.scripts.to_csv:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
